# qsrl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  build.rs
docs/: crypto-backend.md  dependency-policy.md  experiments.md
examples/sample_input/: README.txt
examples/sample_input/docs/: repeated.txt
spec/: format.md
src/: archive.rs  codec.rs  commands.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  protocol.rs  sha256.rs  ui_bridge.rs  util.rs
tests/: prototype.rs
